# anise_basil

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  index.html  params.json
anise/: anise_app.cpp  finishing_step.cpp  preparation_step.cpp
asm/: best_overlap_graph.cpp
basil/: bam_filter_pipeline.cpp  bam_filter_pipeline.h  basil_app.cpp  oea_extractor.cpp
rep_sep/: separating_columns.cpp
shared/: orphan_extractor.h
src/: CMakeLists.txt
src/anise/: anise_app.cpp  file_name_tokens.cpp  finishing_step.cpp  library_info.cpp  preparation_step.cpp  read_mapping_substep.cpp  site_data.cpp  store_utils.cpp
src/asm/: consensus_builder.cpp
src/basil/: bam_filter_pipeline.cpp  bam_filter_pipeline.h  basil_app.cpp  filter_realignment.h  library_info.h  oea_extractor.cpp
src/eval/: lba.cpp
src/rep_sep/: clique_enum.cpp  local_variation_store.cpp  string_packed_pop_count.h
src/shared/: progress_indicator.cpp  version.h
test/: 01_test_anise_minimal.sh  01_test_basil_minimal.sh
test/01/: _prepare.sh  anise.fa  anise.sam  basil.vcf  simulated.bam.bai
util/cmake/: FindLEMON.cmake
util/travis/: linux-cibuild.sh
